@@ -16,17 +16,12 @@
 
 package com.ksoot.common.boot.config.error;
 
-import static com.ksoot.common.boot.config.error.ProblemConstants.Keys.FIELD_ERRORS;
-import static com.ksoot.common.boot.config.error.ProblemConstants.Keys.VIOLATIONS;
-
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.validation.ConstraintViolationException;
 
-import org.springframework.core.env.Environment;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -49,39 +44,30 @@ import com.ksoot.common.message.MessageProvider;
  */
 public class ProblemHelper extends AbstractProblemHelper implements AdviceTrait {
 
-	private static final String MISSING_SERVLET_REQUEST_PARAMETER_EXCEPTION_PREFIX = "missing.";
-
-	public ProblemHelper(final Environment env,
-			final ProblemProperties properties) {
-		super(env.getProperty("server.servlet.context-path"), properties);
+	public ProblemHelper(final ErrorBuilder errorBuilder, final ProblemProperties properties) {
+		super(errorBuilder, properties);
 	}
-	
+
 	ResponseEntity<Problem> createProblem(final ErrorResolver errorResolver, final Throwable exception,
 			final NativeWebRequest request) {
-		ProblemBuilder problemBuilder = problemBuilder(errorResolver, requestUri(request));
-		problemBuilder.withType(generateType(requestUri(request), errorResolver.typeCode()));
+		ProblemBuilder problemBuilder = this.errorBuilder.problemBuilder(errorResolver, requestUri(request));
 		addDebugInfo(problemBuilder, exception);
 		return create(exception, problemBuilder.build(), request);
 	}
 
 	ResponseEntity<Problem> createProblem(final ApplicationProblem problem, final NativeWebRequest request) {
 		ErrorResolver errorResolver = problem.getErrorResolver();
-		ProblemBuilder problemBuilder = errorResolver != null ?
-				problemBuilder(errorResolver, requestUri(request))
-				: problemBuilder(problem.getTitle(), requestUri(request), 
-						problem.getStatus(), problem.getMessage(), 
-						problem.getLocalizedMessage(), time());
-		problemBuilder.withType(errorResolver != null ? generateType(requestUri(request), 
-				errorResolver.typeCode()) 
-				: problem.getType());
+		ProblemBuilder problemBuilder = errorResolver != null
+				? this.errorBuilder.problemBuilder(errorResolver, requestUri(request))
+				: this.errorBuilder.problemBuilder(problem.getTitle(), requestUri(request), problem.getType(),
+						problem.getStatus(), problem.getMessage(), problem.getLocalizedMessage());
 		addDebugInfo(problemBuilder, problem);
 		return create(problem, problemBuilder.build(), request);
 	}
 
 	ResponseEntity<Problem> createProblem(final ApplicationException exception, final NativeWebRequest request) {
 		ErrorResolver errorResolver = exception.getErrorResolver();
-		ProblemBuilder problemBuilder = problemBuilder(errorResolver, requestUri(request));
-		problemBuilder.withType(generateType(requestUri(request), errorResolver.typeCode()));
+		ProblemBuilder problemBuilder = this.errorBuilder.problemBuilder(errorResolver, requestUri(request));
 		addDebugInfo(problemBuilder, exception);
 		return create(exception, problemBuilder.build(), request);
 	}
@@ -89,22 +75,22 @@ public class ProblemHelper extends AbstractProblemHelper implements AdviceTrait 
 	ResponseEntity<Problem> createProblem(final ConstraintViolationException exception,
 			final NativeWebRequest request) {
 		ErrorResolver errorResolver = GeneralErrorResolver.CONSTRAINT_VIOLATIONS;
-		ProblemBuilder problemBuilder = problemBuilder(errorResolver, requestUri(request));
-		problemBuilder.withType(generateType(requestUri(request), errorResolver.typeCode()));
-		List<ViolationVM> violations = exception.getConstraintViolations().stream().map(voilation -> ViolationVM.of(properties, voilation))
-				.collect(Collectors.toList());
-		problemBuilder.with(VIOLATIONS, violations);
+		ProblemBuilder problemBuilder = this.errorBuilder.problemBuilder(errorResolver, requestUri(request));
+		List<ViolationVM> violations = exception.getConstraintViolations().stream()
+				.map(voilation -> ViolationVM.of(properties, voilation)).toList();
+		this.errorBuilder.addViolations(problemBuilder, violations);
 		addDebugInfo(problemBuilder, exception);
 		return create(exception, problemBuilder.build(), request);
 	}
-	
+
 	ResponseEntity<Problem> createProblem(final MissingServletRequestParameterException exception,
 			final NativeWebRequest request) {
 		ErrorResolver errorResolver = GeneralErrorResolver.VALIDATION_FAILURE;
-		ProblemBuilder problemBuilder = problemBuilder(errorResolver.title(),
-				requestUri(request), errorResolver.status(), exception.getMessage(), 
-				MessageProvider.getMessage(MISSING_SERVLET_REQUEST_PARAMETER_EXCEPTION_PREFIX + exception.getParameterName(), exception.getLocalizedMessage()), time());
-		problemBuilder.withType(generateType(requestUri(request), errorResolver.typeCode()));
+		ProblemBuilder problemBuilder = this.errorBuilder.problemBuilder(errorResolver.title(), requestUri(request),
+				this.errorBuilder.generateType(requestUri(request), errorResolver.typeCode()), errorResolver.status(),
+				exception.getMessage(),
+				MessageProvider.getMessage(ProblemConstants.MISSING_SERVLET_REQUEST_PARAMETER_EXCEPTION_PREFIX
+						+ exception.getParameterName(), exception.getLocalizedMessage()));
 		addDebugInfo(problemBuilder, exception);
 		return create(exception, problemBuilder.build(), request);
 	}
@@ -112,13 +98,13 @@ public class ProblemHelper extends AbstractProblemHelper implements AdviceTrait 
 	ResponseEntity<Problem> createProblem(final MethodArgumentNotValidException exception,
 			final NativeWebRequest request) {
 		ErrorResolver errorResolver = GeneralErrorResolver.VALIDATION_FAILURE;
-		ProblemBuilder problemBuilder = problemBuilder(errorResolver, requestUri(request));
+		ProblemBuilder problemBuilder = this.errorBuilder.problemBuilder(errorResolver, requestUri(request));
 
 		BindingResult result = exception.getBindingResult();
-		List<FieldErrorVM> fieldErrors = result.getFieldErrors().stream().map(fieldError -> FieldErrorVM.of(properties, fieldError))
-				.collect(Collectors.toList());
+		List<FieldErrorVM> fieldErrors = result.getFieldErrors().stream()
+				.map(fieldError -> FieldErrorVM.of(this.properties, fieldError)).toList();
 
-		problemBuilder.withType(generateType(requestUri(request), errorResolver.typeCode())).with(FIELD_ERRORS, fieldErrors);
+		this.errorBuilder.addFieldErrors(problemBuilder, fieldErrors);
 		addDebugInfo(problemBuilder, exception);
 		return create(exception, problemBuilder.build(), request);
 	}
@@ -132,12 +118,13 @@ public class ProblemHelper extends AbstractProblemHelper implements AdviceTrait 
 		return create(exception, problemInstance(exception, errorResolver, requestUri(request)), request);
 	}
 
-	ResponseEntity<Problem> createProblem(final ResponseStatusException exception,
-			final NativeWebRequest request) {
+	ResponseEntity<Problem> createProblem(final ResponseStatusException exception, final NativeWebRequest request) {
 		ErrorResolver errorResolver = GeneralErrorResolver.RESPONSE_STATUS_EXCEPTION;
-		ProblemBuilder problemBuilder = problemBuilder(errorResolver.title(),
-				requestUri(request), Status.valueOf(exception.getRawStatusCode()), errorResolver.message(), 
-				errorResolver.localizedMessage(), time());
+		URI requestUri = requestUri(request);
+		ProblemBuilder problemBuilder = this.errorBuilder.problemBuilder(errorResolver.title(), requestUri,
+				this.errorBuilder.generateType(requestUri, errorResolver.typeCode()),
+				Status.valueOf(exception.getRawStatusCode()), errorResolver.message(),
+				errorResolver.localizedMessage());
 		addDebugInfo(problemBuilder, exception);
 		return create(exception, problemBuilder.build(), request);
 	}
